crates/ruff_linter/src/rules/airflow/snapshots/ruff_linter__rules__airflow__tests__AIR001_AIR001.py.snap
---
source: crates/ruff_linter/src/rules/airflow/mod.rs
---
AIR001 Task variable name should match the `task_id`: "my_task"
  --> AIR001.py:11:1
   |
11 | incorrect_name = PythonOperator(task_id="my_task")  # AIR001
   | ^^^^^^^^^^^^^^
   |

AIR001 Task variable name should match the `task_id`: "my_task"
  --> AIR001.py:14:1
   |
14 | incorrect_name = AirbyteTriggerSyncOperator(task_id="my_task")  # AIR001
   | ^^^^^^^^^^^^^^
   |

AIR001 Task variable name should match the `task_id`: "my_task"
  --> AIR001.py:17:1
   |
17 | incorrect_name = AppflowFlowRunOperator(task_id="my_task")  # AIR001
   | ^^^^^^^^^^^^^^
   |
