crates/ruff_linter/src/rules/airflow/snapshots/ruff_linter__rules__airflow__tests__AIR002_AIR002.py.snap
---
source: crates/ruff_linter/src/rules/airflow/mod.rs
---
AIR002 `DAG` or `@dag` should have an explicit `schedule` argument
 --> AIR002.py:4:1
  |
4 | DAG(dag_id="class_default_schedule")
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |

AIR002 `DAG` or `@dag` should have an explicit `schedule` argument
  --> AIR002.py:13:2
   |
13 | @dag()
   |  ^^^^^
   |
