crates/ruff_linter/src/rules/airflow/snapshots/ruff_linter__rules__airflow__tests__AIR003_AIR003_dag_decorator.py.snap
---
source: crates/ruff_linter/src/rules/airflow/mod.rs
---
AIR003 `Variable.get()` outside of a task
 --> AIR003_dag_decorator.py:4:7
  |
4 | var = Variable.get("foo")  # AIR003
  |       ^^^^^^^^^^^^^^^^^^^
  |
help: Use Jinja templates instead
