crates/ruff_linter/src/rules/airflow/snapshots/ruff_linter__rules__airflow__tests__AIR003_AIR003_sdk.py.snap
---
source: crates/ruff_linter/src/rules/airflow/mod.rs
---
AIR003 A `@task.branch` that can be replaced with `@task.short_circuit`
  --> AIR003_sdk.py:9:1
   |
 7 |   # Violations (should trigger AIR003):
 8 |
 9 | / @task.branch
10 | | def sdk_two_returns_one_non_empty():  # AIR003
11 | |     if condition1:
12 | |         return ["my_downstream_task"]
13 | |     return []
   | |_____________^
   |
