crates/ruff_linter/src/rules/airflow/snapshots/ruff_linter__rules__airflow__tests__AIR005_AIR005_dag_decorator.py.snap
---
source: crates/ruff_linter/src/rules/airflow/mod.rs
---
AIR005 `Variable.get()` outside of a task; use Jinja templates instead
 --> AIR005_dag_decorator.py:4:7
  |
2 | from airflow.models import Variable
3 |
4 | var = Variable.get("foo")  # AIR005
  |       ^^^^^^^^^^^^^^^^^^^
  |
