crates/ruff_linter/src/rules/airflow/snapshots/ruff_linter__rules__airflow__tests__AIR301_AIR301.py.snap
---
source: crates/ruff_linter/src/rules/airflow/mod.rs
---
AIR301.py:4:1: AIR301 DAG should have an explicit `schedule` argument
  |
2 | from airflow.timetables.simple import NullTimetable
3 |
4 | DAG(dag_id="class_default_schedule")
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ AIR301
5 |
6 | DAG(dag_id="class_schedule", schedule="@hourly")
  |

AIR301.py:13:2: AIR301 DAG should have an explicit `schedule` argument
   |
13 | @dag()
   |  ^^^^^ AIR301
14 | def decorator_default_schedule():
15 |     pass
   |
