crates/ruff_linter/src/rules/airflow/snapshots/ruff_linter__rules__airflow__tests__AIR301_AIR301_airflow_plugin.py.snap
---
source: crates/ruff_linter/src/rules/airflow/mod.rs
---
AIR301 `operators` is removed in Airflow 3.0
 --> AIR301_airflow_plugin.py:7:5
  |
7 |     operators = [PluginOperator]
  |     ^^^^^^^^^
  |
help: This extension should just be imported as a regular python module.

AIR301 `sensors` is removed in Airflow 3.0
 --> AIR301_airflow_plugin.py:8:5
  |
8 |     sensors = [PluginSensorOperator]
  |     ^^^^^^^
  |
help: This extension should just be imported as a regular python module.

AIR301 `hooks` is removed in Airflow 3.0
 --> AIR301_airflow_plugin.py:9:5
  |
9 |     hooks = [PluginHook]
  |     ^^^^^
  |
help: This extension should just be imported as a regular python module.

AIR301 `executors` is removed in Airflow 3.0
  --> AIR301_airflow_plugin.py:10:5
   |
10 |     executors = [PluginExecutor]
   |     ^^^^^^^^^
   |
help: This extension should just be imported as a regular python module.
